--- a/package.json
+++ b/package.json
@@ -5,21 +5,33 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "jest",
-    "watch": "jest --watchAll"
+    "watch": "jest --watchAll",
+    "build": "npx tsc",
+    "dev": "concurrently \"npx tsc --watch\" \"node ./bin/www\""
   },
   "dependencies": {
+    "concurrently": "^8.2.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-typescript": "^7.24.6",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.12",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^29.7.0",
     "babel-preset-env": "^1.7.0",
     "jest": "^29.7.0",
     "superagent": "^9.0.2",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "typescript": "^5.4.5"
   }
 }
