chore: converted all js files to ts feat(utils): Created utils file for url generation and validation feat(request): Created basic request test: Created test for full request flow refactor: removed users.ts and shortUrls.ts refactor: repositories directory created index.ts added to repositories directory. refactor: error checking added for unprocessable entity refactor: added guard to /shorten refactor: Added types for sqlite3 docs: README.md updated refactor: typings updated

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "node ./bin/www",
     "test": "jest",
     "watch": "jest --watchAll",
-    "build": "npx tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"node ./bin/www\""
+    "build": "npx tsc && npm run copy-files",
+    "copy-files": "cp -r ./src/views/ ./dist/views"
   },
   "dependencies": {
+    "@types/sqlite3": "^3.1.11",
     "concurrently": "^8.2.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
